--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,73 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/appengine-gcs-client-0.4.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/joda-time-2.4/joda-time-2.4.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/appengine-remote-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/shared/servlet-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/appengine-tools-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/impl/appengine-api-labs.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/impl/appengine-api-stubs.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/impl/appengine-api.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/impl/appengine-local-runtime.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/impl/google_sql.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-api-client-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-api-client-android-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-api-client-appengine-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-api-client-gson-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-api-client-jackson2-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-api-client-java6-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-api-client-servlet-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-http-client-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-http-client-android-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-http-client-appengine-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-http-client-gson-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-http-client-jackson2-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-http-client-jdo-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-oauth-client-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-oauth-client-appengine-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-oauth-client-java6-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-oauth-client-jetty-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/google-oauth-client-servlet-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/gson-2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/httpclient-4.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/httpcore-4.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/jackson-core-2.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs/transaction-api-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/google-api-services-storage-v1beta2-rev56-1.19.0.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/commons-logging-1.1.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-api-client-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-api-client-android-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-api-client-appengine-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-api-client-gson-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-api-client-jackson2-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-api-client-java6-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-api-client-servlet-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-http-client-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-http-client-android-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-http-client-appengine-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-http-client-gson-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-http-client-jackson2-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-http-client-jdo-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-oauth-client-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-oauth-client-appengine-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-oauth-client-java6-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-oauth-client-jetty-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/google-oauth-client-servlet-1.19.0-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/gson-2.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/httpclient-4.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/httpcore-4.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/jackson-core-2.1.3-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/jdo2-api-2.3-eb-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/jetty-6.1.26-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/jetty-util-6.1.26-sources.jar"/>
+	<classpathentry kind="lib" path="/Users/Dany/Downloads/storage 2/libs-sources/transaction-api-1.1-sources.jar"/>
+	<classpathentry kind="lib" path="/Applications/Eclipse Kepler Google Cloud IDE/plugins/com.google.appengine.eclipse.sdkbundle_1.9.10/appengine-java-sdk-1.9.10/lib/user/appengine-api-1.0-sdk-1.9.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
